--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,8 @@ Metrics/AbcSize:
   Max: 50
 Metrics/ClassLength:
   Max: 150
+Metrics/CyclomaticComplexity:
+  Enabled: false
 Metrics/BlockLength:
   AllowedMethods: ['describe']
   Max: 30
